# HSR-multiview

./: .gitignore  README.md
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/src/: hello_moveit.cpp
src/hsr_capture/: CMakeLists.txt  package.xml
src/hsr_capture/launch/: move_group.launch.py  moveit_motion_planning.rviz  rs_config.json
src/hsr_capture/src/: d405_capture.cpp
src/hsr_moveit_config/: .setup_assistant  CMakeLists.txt
src/hsr_moveit_config/config/: iiwa_workcell.srdf  joint_limits.yaml  kinematics_kdl.yaml  kinematics_trac_ik.yaml  ompl_planning.yaml  ros_controllers.yaml  start_positions.yaml
src/hsr_moveit_config/launch/: move_group.launch.py  moveit_iiwa_config.rviz  moveit_motion_planning.rviz
src/hsr_py/: package.xml  setup.cfg  setup.py
src/hsr_py/hsr_py/: my_python_node.py
src/hsr_scene_geometry/: package.xml
src/hsr_scene_geometry/src/: hsr_scene_geometry.cpp
src/hsr_support/launch/: view_urdf.launch.py
src/hsr_support/meshes/iiwa_14/visual/: D405_mount.daeZone.Identifier
src/hsr_support/meshes/structure/visual/: iiwa_14_mounting_plate.dae
src/hsr_support/urdf/: iiwa_workcell.urdf.xacro
src/hsr_support/urdf/xacros/: d405.xacro  iiwa_14.xacro  iiwa_14_mounting_plate.xacro  optical_table.xacro
src/hsr_testing/: CMakeLists.txt
src/hsr_testing/src/: iiwa_avoid_box.cpp  iiwa_first_move.cpp  iiwa_ompl_demo.cpp  iiwa_trajectory_test.cpp
src90/hello_moveit/: package.xml
src90/hsr_capture/: CMakeLists.txt  package.xml
src90/hsr_capture/launch/: move_group.launch.py  moveit_iiwa_config.rviz  moveit_motion_planning.rviz  moveit_motion_planning_test.rviz  rs_config.json
src90/hsr_capture/src/: d405_capture.cpp
src90/hsr_moveit_config/: .setup_assistant  package.xml
src90/hsr_moveit_config/config/: fake_controllers.yaml  iiwa_workcell.srdf  kinematics_trac_ik.yaml  ompl_planning.yaml  ros_controllers.yaml
src90/hsr_moveit_config/launch/: move_group.launch.py  moveit_iiwa_config.rviz  moveit_motion_planning_test.rviz
src90/hsr_scene_geometry/: CMakeLists.txt
src90/hsr_scene_geometry/src/: hsr_scene_geometry.cpp
src90/hsr_support/: CMakeLists.txt  package.xml
src90/hsr_support/launch/: view_urdf.rviz
src90/hsr_support/meshes/d405/: d405.dae
src90/hsr_support/meshes/iiwa_14/visual/: D405_mount.dae
src90/hsr_support/urdf/: iiwa_workcell.urdf.xacro
src90/hsr_support/urdf/xacros/: d405.xacro  iiwa_14.xacro  iiwa_14_mounting_plate.xacro
src90/hsr_testing/: CMakeLists.txt  package.xml
src90/hsr_testing/launch/: iiwa_trajectory_test.launch.py
src90/hsr_testing/src/: add_walls.cpp  iiwa_avoid_box.cpp  iiwa_trajectory_test.cpp
